--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        version_kotlin = "1.3.11"
-        version_core = "1.0.1"
+        version_kotlin = "1.3.61"
+        version_core = "1.2.0"
         version_constraint_layout = "1.1.3"
         version_lifecycle_extensions = "2.0.0"
-        version_material = "1.0.0"
-        version_navigation = "1.0.0"
+        version_material = "1.1.0"
+        version_navigation = "2.3.0-alpha01"
     }
     repositories {
         google()
@@ -31,6 +31,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
